Fix Overlap

--- a/public/scss/_profile.scss
+++ b/public/scss/_profile.scss
@@ -26,6 +26,7 @@
     width: 80px;
     height: 80px;
     border-radius: 50%;
+    z-index:5;
 }
 
 .change-avatar {
